fixing overflow bug

--- a/styles/Feed/Post.module.css
+++ b/styles/Feed/Post.module.css
@@ -110,7 +110,7 @@
 	display: block;
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 600px) {
 	/* For mobile phones: */
 	.post {
 		padding: 1rem;
